--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script type="module" src="component.module.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg shadow">
@@ -29,9 +30,6 @@
                     <li class="nav-item m-1">
                       <a class="nav-link active" aria-current="page" href="#">INICIO</a>
                     </li>
-                    <li class="nav-item m-1">
-                      <a class="nav-link" href="#">NOSOTROS</a>
-                    </li>
                     <li class="nav-item dropdown m-1">
                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         SERVICIOS
@@ -44,16 +42,24 @@
                       </ul>
                     </li>
                     <li class="nav-item m-1">
-                      <a class="nav-link" href="#">CONVENIOS</a>
+                      <a class="nav-link" href="#nosotros">NOSOTROS</a>
                     </li>
                     <li class="nav-item m-1">
-                      <a class="nav-link" href="#">TESTIMONIOS</a>
+                      <a class="nav-link" href="#convenios">CONVENIOS</a>
                     </li>
                     <li class="nav-item m-1">
-                      <button class="btn btn-outline-primary" type="submit">Agenda acá</button>
+                      <a class="nav-link" href="#testimonios">TESTIMONIOS</a>
                     </li>
                     <li class="nav-item m-1">
-                      <button class="btn btn-primary" type="submit">Contacto</button>
+                      <button class="btn btn-outline-primary" type="submit">
+                        <i class="fa fa-whatsapp"></i>
+                        Agenda acá
+                      </button>
+                    </li>
+                    <li class="nav-item m-1">
+                        <form action="#contacto">
+                            <button class="btn btn-primary" type="submit">Contacto</button>
+                        </form>
                     </li>
                   </ul>
                 </div>
@@ -62,17 +68,23 @@
         <section class="container py-5">
             <header class="row align-items-center">
                 <div class="col p-4">
-                    <h1 class="display-3">Rehabilitación <b class="text-primary">integral</b> a domicilio</h1>
-                    <p class="fs-5 text-muted">
+                    <h3 class="text-uppercase fs-5 text-muted mb-0 fade-up delay-1">Kinesiología a domicilio</h3>
+                    <h1 class="display-3 fade-up delay-2">Rehabilitación <b class="text-primary">integral</b> a domicilio</h1>
+                    <p class="fs-5 text-muted mb-4 fade-up delay-3">
                         Te enseñamos a que comprendas y escuches tu cuerpo para aliviar tu sintomatología y mejorar tu 
                         calidad de vida.
                     </p>
                     <div>
-                      <button class="btn btn-primary fw-bold fs-5" type="submit">Contacto</button>
-                      <button class="btn btn-outline-primary fs-5" type="submit">Agenda acá</button>
+                        <button class="btn btn-primary fw-bold fs-5 fade-up delay-4" type="submit">
+                          Contacto
+                        </button>
+                        <button class="btn btn-outline-primary fs-5 fade-up delay-4" type="submit">
+                            <i class="fa fa-whatsapp"></i>
+                            Agenda acá
+                        </button>
                     </div>
                 </div>
-                <div class="col p-4">
+                <div class="col p-4 fade-left">
                     <img src="assets/img/undraw_injured_9757.svg" alt="">
                 </div>
             </header>
@@ -80,139 +92,97 @@
         <section class="container py-5">
             <h2 class="text-center mb-5">Nuestro Servicios</h2>
             <div class="row g-2">
-                <div class="col">
-                    <article class="p-4 shadow-sm h-100">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Kinesiología musculoesquelética</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/svg/stretch.svg"
+                        title='Kinesiología musculoesquelética'
+                        body='
                             Prevención y rehabilitación de lesiones y/o patologías del sistema músculo-esquelético ya sean de 
                             origen traumático como desgarros, esguinces, fracturas o degenerativas como lumbagos, tendinitis, 
                             entre otras.
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
-                <div class="col">
-                    <article class="p-4 shadow-sm h-100">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Kinesiología en dolor persitente</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/svg/pain.svg"
+                        title='Kinesiología en dolor persitente'
+                        body='
                             Nos especializamos en el tratamiento del dolor persistente, dolores que llevan más de 6 meses 
                             con uno. Creemos que es indispensable reconocer los factores que están influenciando 
                             negativamente en la recuperación para poder...
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
-                <div class="col">
-                    <article class="p-4 shadow-sm h-100">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Kinesiología para el adulto mayor</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/svg/elderly.svg"
+                        title='Kinesiología para el adulto mayor'
+                        body='
                             Trabajamos al adulto mayor como un todo, enfocándonos en todas las áreas que pueden verse 
                             afectadas por el envejecimiento. Contamos con kinesiólogos especializados en recuperar la 
                             función motora y física a través de la terapia basada...
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
-                <div class="col">
-                    <article class="p-4 shadow-sm h-100">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Kinesiología respiratoria en niños y adultos</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/svg/lung.svg"
+                        title='Kinesiología respiratoria en niños y adultos'
+                        body='
                             Llega el invierno y con ello llegan las patologías respiratorias. En este servicio encontrarás 
                             kinesiólogos especializados para el tratamiento de estas patologías tanto en adultos como en 
                             niños. Utilizamos técnicas manuales y ventilatorias...
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
-            </div>
-            <div class="row g-2 mt-3">
-                <div class="col">
-                    <article class="p-4 shadow-sm">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Kinesiología en emabarazo y post parto</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/svg/pregnant.svg"
+                        title='Kinesiología en emabarazo y post parto'
+                        body='
                             El cuerpo de las mamás presenta tanto cambios hormonales como musculoesqueléticos y por eso 
                             es que tenemos los profesionales que te ayudarán en este lindo proceso a que lo lleves de 
                             la mejor manera posible, abarcando todas las áreas...
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
-                <div class="col">
-                    <article class="p-4 shadow-sm h-100">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Terapia Ocupacional en adultos</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/svg/checklist.svg"
+                        title='Terapia Ocupacional en adultos'
+                        body='
                             Es evidente la importancia de la ocupación en el ser humano para un completo bienestar y 
                             salud, tanto física como mental. Este servicio ofrece la atención de Terapia Ocupacional 
                             para adultos que tengan dificultad en su desempeño...
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
-                <div class="col">
-                    <article class="p-4 shadow-sm h-100">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Masoterapia</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/svg/massage.svg"
+                        title='Masoterapia'
+                        body='
                             Contamos con todos los materiales para llevarte una sesión de masajes a tu casa. Este puede 
                             ser con fines terapéuticos como de relajación y deportivos como descontracturantes y con 
                             estas podrás recuperarte o prevenir lesiones como también simplemente relajarte en un...
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
-                <div class="col">
-                    <article class="p-4 shadow-sm">
-                        <div class="border p-2 bg-primary bg-opacity-75 d-inline-block rounded-3">
-                            <i class="fa fa-image fs-1 text-light"></i>
-                        </div>
-                        <h3 class="mt-3 mb-2 h4 fw-semibold">Entrenamiento</h3>
-                        <p class="text-muted">
+                <div class="col-xxl-3 col-xl-4 col-lg-6">
+                    <service-card 
+                        img="assets/img/dumbbell.png"
+                        title='Entrenamiento'
+                        body='
                             Consideramos muy importante que puedas entrenarte de una manera segura y de la mano de 
                             profesionales que sepan hacerlo. Por eso te entregamos el servicio de entrenamiento en tu 
                             hogar, consulta por los planes. ¡Tenemos precios especiales mientras más...
-                        </p>
-                        <div class="d-flex justify-content-end">
-                            <i class="fa fa-arrow-right fs-4"></i>
-                        </div>
-                    </article>
+                        '
+                    ></service-card>
                 </div>
             </div>
         </section>
-        <section class="py-5 bg-primary bg-opacity-25">
+        <section id="nosotros" class="py-5 bg-image-1 bg-opacity-25">
             <article class="container">
                 <h2 class="text-center mb-3 text-primary">Sobre nosotros</h2>
                 <p class="fs-5 text-center">
@@ -222,7 +192,7 @@
                 </p>
             </article>
         </section>
-        <section class="container py-5">
+        <section id="testimonios" class="container py-5">
             <h2 class="text-center mb-5">Testimonios</h2>
             <article class="h-100 my-2 border">
                 <div class="row">
@@ -299,7 +269,7 @@
                 </div>
             </article>  
         </section>
-        <section class="bg-primary bg-opacity-25 py-5">
+        <section id="convenios" class="bg-image-2 bg-opacity-25 py-5">
             <div class="container">
                 <h2 class="text-center mb-4 text-primary">Nuestros Convenios</h2>
                 <div class="row align-items-center g-5">
@@ -324,10 +294,10 @@
                 </div>
             </div>
         </section>
-        <section class="py-5">
+        <section id="faq" class="py-5">
             <div class="container">
                 <h2 class="text-center mb-3">Preguntas Frecuentes</h2>
-                <div class="accordion" id="accordionExample">
+                <div class="accordion m-auto" id="accordionExample">
                     <article class="accordion-item">
                         <h3 class="accordion-header">
                             <button class="accordion-button"
@@ -437,7 +407,7 @@
                 </div>
             </div>
         </section>
-        <section class="bg-primary bg-opacity-25 py-5">
+        <section id="contacto" class="bg-primary bg-opacity-25 py-5">
             <div class="container">
                 <h2 class="text-center mb-4">Contáctanos</h2>
                 <div class="row bg-light rounded-5">
